--- a/index.html
+++ b/index.html
@@ -4,10 +4,36 @@
     <title>기타 소개</title>
     <center><font size="10em">기타 Guitar를 소개합니다.</font></center>
 </head>
+<style>
+    grn{
+        color: #24d56b;
+    }
+    ol {
+        color:rgba(255, 0, 0, 0.583)
+    }
+    p{
+        text-align: justify;
+    }
+    bg{
+        font-size: 120%;
+    }
+    uln{
+        text-decoration: underline;
+    }
+    .guitar{
+        color: black;
+    }
+    #fhk{
+        font-size: 80%;
+    }
+    #snh{
+        font-size: 130%;
+    }
+</style>
 <body>
     <p>
         <center>
-        <img src="guitar-g77967e05b_1920.jpg" alt="guitar_img" width="400" height="250">
+        <img src="guitar-g77967e05b_1920.jpg" alt="guitar_img" width="30%">
         </center>
     </p>
     <meta name="description" content="HTML meta tag page">
@@ -15,26 +41,26 @@
         손으로 줄을 튕겨서 소리를 내는 <a href="https://namu.wiki/w/%ED%98%84%EC%95%85%EA%B8%B0" target="_blank">발현악기</a>의 일종. 보통 6현 구성으로 되어 있으며, 복현 또는 다현 구성으로 된 변종 기타들도 존재한다.
     </p>
     <p>
-        피아노가 진입장벽이 낮다는 점으로 대중화에 성공했다면, 기타는 높은 휴대성을 지니면서도 화음 표현을 통한 솔로 연주가 용이하며, 피아노 수준의 음계를 소화할 수 있는 등의 편의성으로 대중화에 성공했다.
+        피아노가 <unl>진입장벽</unl>이 낮다는 점으로 대중화에 성공했다면, 기타는 <grn>높은 휴대성</grn>을 지니면서도 화음 표현을 통한 솔로 연주가 용이하며, 피아노 수준의 음계를 소화할 수 있는 등의 <uln>편의성으로</uln> <grn>대중화</grn>에 성공했다.
     </p>
     <br>
-        <i>이 페이지는 <u><b>나무위키</b></u>의 정보를 바탕으로 만들어졌습니다.</i>
+        <i>이 페이지는 <u><b>나무위키</b></u>의 <uln>정보를 바탕으로</uln> 만들어졌습니다.</i>
     <br>
     <p>
-        보통 노래에 반주로 사용되는 코드만 제대로 하게 되는데도 많은 노력을 필요로 하며, 기본기인 코드 반주를 넘어 본격적인 연주로 들어갈수록 더욱 어려워진다. 입문자들이 특히 기타를 처음 접할 때 곤란해 하는 것은 평소 자주 사용하지 않는 손가락 근육과, 손 끝 볼록살을 사용해서 줄을 누르기 때문에 쉽게 피로해지고 피부가 아파오는 것이다. 답은 적응 기간을 넘어서 본인이 흥미를 갖고 꾸준히 연주함으로서 피부를 단련시키고, 근육을 기르는 것 뿐이지만 여기서 포기하는 사람들이 반 이상일 정도로 관악기나 건반악기에 비하면 <strong>입문 난이도가 높은 편이다.</strong>
+        보통 노래에 반주로 사용되는 코드만 제대로 하게 되는데도 많은 노력을 필요로 하며, 기본기인 코드 반주를 넘어 본격적인 연주로 들어갈수록 더욱 <bg>어려워진다.</bg> 입문자들이 특히 기타를 처음 접할 때 곤란해 하는 것은 평소 자주 사용하지 않는 손가락 근육과, 손 끝 볼록살을 사용해서 줄을 누르기 때문에 쉽게 피로해지고 피부가 아파오는 것이다. 답은 적응 기간을 넘어서 본인이 흥미를 갖고 꾸준히 연주함으로서 피부를 단련시키고, 근육을 기르는 것 뿐이지만 여기서 포기하는 사람들이 반 이상일 정도로 관악기나 건반악기에 비하면 <strong>입문 난이도가 높은 편이다.</strong>
     </p>
     <p>
         울림통의 공명 구조 한계 때문에 음량이 그리 큰 편이 아니라 오케스트라나 밴드 등의 협연에는 적합하지 않아서, 이를 극복하기 위해 전기·전자기술을 악기에 적용하는 시도를 통해 20세기에 <a href="https://namu.wiki/w/%EC%9D%BC%EB%A0%89%ED%8A%B8%EB%A6%AD%20%EA%B8%B0%ED%83%80?from=%EC%A0%84%EA%B8%B0%20%EA%B8%B0%ED%83%80" target="_blank">전기 기타</a>가 탄생하게 된다.
     </p>
-    <p style="line-height: 3;">
+    <p>
         <body>
-        <head>기타 종류</head>
+        <h1>기타 종류</h1>
         <ol>
-            <li>어쿠스틱 기타</li>
-            <li>일렉트릭 기타</li>
-            <li>스틸 기타</li>
-            <li>베이스 기타</li>
-            <li>클래식 기타</li>
+            <li class="guitar">어쿠스틱 기타</li>
+            <li class="guitar">일렉트릭 기타</li>
+            <li class="guitar">스틸 기타</li>
+            <li id="fhk">베이스 기타</li>
+            <li id="snh">클래식 기타</li>
         </ol>
         </body>
     </p>
